Bug: Styles were not working on mobile devices. Fix: Bug fixed for mobile responsiveness.

--- a/src/styles/Meanings.css
+++ b/src/styles/Meanings.css
@@ -45,7 +45,7 @@
     content: "--";
 }
 
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 420px) {
     .Meanings > ul {
         flex-direction: column;
         height: 18vh;
