--- a/src/styles/SearchComponent.css
+++ b/src/styles/SearchComponent.css
@@ -30,7 +30,7 @@
     width:50px;
 }
 
-@media screen and (max-width: 380px){
+@media screen and (max-width: 420px){
     .search-Component  input {
         height: 1.5rem;
         font-size: 1rem;
